--- a/app/globals.css
+++ b/app/globals.css
@@ -2,45 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Updating font-face definitions for Clash Display with explicit weights */
+/* Roboto font inclusion with various weights */
 @font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplayRegular.otf') format('opentype');
+  font-family: 'Roboto';
+  src: url('https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2') format('woff2');
   font-weight: 400; /* Regular */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplayMedium.otf') format('opentype');
+  font-family: 'Roboto';
+  src: url('https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu5mxK.woff2') format('woff2');
   font-weight: 500; /* Medium */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplaySemibold.otf') format('opentype');
-  font-weight: 600; /* Semi Bold */
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplayBold.otf') format('opentype');
+  font-family: 'Roboto';
+  src: url('https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmEU9fBBc4.woff2') format('woff2');
   font-weight: 700; /* Bold */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplayExtraLight.otf') format('opentype');
-  font-weight: 200; /* Extra Light */
+  font-family: 'Roboto';
+  src: url('https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xIIzc.woff2') format('woff2');
+  font-weight: 300; /* Light */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Clash Display';
-  src: url('/fonts/ClashDisplayLight.otf') format('opentype');
-  font-weight: 300; /* Light */
+  font-family: 'Roboto';
+  src: url('https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xFIzc.woff2') format('woff2');
+  font-weight: 100; /* Thin */
   font-style: normal;
 }
